Revise love letter text in index.html
Updated the love letter content for Valentine's Day.

--- a/index.html
+++ b/index.html
@@ -350,20 +350,23 @@
         <div class="letter-header">Para ti, mi amor ❤️</div>
         <div class="letter-ornament"></div>
         <p>
-            Desde que llegaste a mi vida, cada día tiene un poco más de luz.
-            Me haces sonreír cuando menos lo espero, y tu presencia convierte
-            lo ordinario en algo extraordinario.
+          Hola bebé, espero estés bien. Primero que todo quiero que sepas que te
+          amo muchísimo y que estoy demasiado feliz de estar contigo. De verdad
+          agradezco cada momento que compartimos, cada risa, cada conversación y
+          cada detalle que tenemos, aunque sea virtual jaja.
         </p>
         <p>
-            Gracias por cada risa compartida, por cada silencio cómodo,
-            por cada mirada que dice más que mil palabras.
-            Eres mi lugar favorito en el mundo.
+          Estoy deseando ya verte y abrazarte fuerte, con esos abrazos suyos que hacen
+          que todo se sienta mejor. Me haces mucha falta. Quisiera estar contigo
+          hoy y poder celebrar juntos, pero sé que no se puede, así que quise
+          hacer esto para que sientas lo especial que eres para mí.
         </p>
         <p>
-            Hoy y siempre, elijo estar a tu lado.
-            ¿Me dejas seguir creando recuerdos hermosos contigo? 🌹
+          Hoy celebramos este San Valentín y también nuestro mesesario, que para
+          mí significa mucho estar junto a you. Gracias por todo el amor que me 
+          das y por ser esa persona tan increíble en mi vida. Te amo demasiado 💖
         </p>
-        <span class="signature">Con todo mi corazón, te quiero 💕</span>
+        <span class="signature">Con todo mi corazón, siempre tuyo 💕</span>
     </div>
 </div>
 
